:crystal_ball: Completed filter user-test

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -32,7 +32,7 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  
+  overflow: scroll;
 }
 
 .login-in-area {
