:art: manager page styling

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -78,6 +78,7 @@ input[type=submit]{
       border-bottom: 1px solid gray;
       border-radius: 1px;
       font: rgb(82, 76, 76);
+      font-weight: bolder;
       margin-top: 2em;
     }
     h3 {
